<resources>
    <string name="app_name">repathApp</string>
    <string name="createDataBtnTEST">TestDataInsert</string>
    <string name="e_mail_address_input">E-mail </string>
    <string name="password_input">Password</string>
    <string name="loginButton">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="lowercase_letters">lowercase_letters</string>
    <string name="uppercase_letters">uppercase_letters</string>
    <string name="digits">digits</string>
    <string name="special_characters">special_characters</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>